# serializer version: 1
# name: test_feature_spec_version_deterministic
  '260ab2657dba7bd797c4588759ab15f8b679ee9bb963b3b092d98704f30e46ee'
# ---
# name: test_feature_spec_version_includes_all_properties
  '3f534b3be4c3521381bbc6d895284679fad40e02722d20c4f43ccc7bd761c690'
# ---
# name: test_feature_spec_version_recorded_in_metadata_store
  dict({
    'feature_key': 'recorded/feature',
    'feature_spec_version': 'f7fe3730484832d0d74a29a2aad42f0077b45377810ba734951cfcf2dd10b014',
    'feature_version': '0c7b2d83252fbf2f689bec7d37c4f7ffb103755d11eafabc1e000a372f415d83',
    'snapshot_version': '14d4294da40f4ab27ca85eb739fffd70e92c92522dbcba995cfa2aa343988bf3',
  })
# ---
# name: test_feature_spec_version_stored_in_snapshot
  dict({
    'feature_class_path': 'tests.test_spec_version.SnapshotFeature',
    'feature_spec': dict({
      'code_version': '2',
      'deps': None,
      'fields': list([
        dict({
          'code_version': '1',
          'deps': '__METAXY_ALL_DEP__',
          'key': list([
            'data',
          ]),
        }),
      ]),
      'id_columns': list([
        'sample_uid',
      ]),
      'key': list([
        'snapshot',
        'test',
      ]),
    }),
    'feature_spec_version': 'da37d6a1865eb985e5164db5e7a9796fbcb87427416305aea3e5412db69d00d5',
    'feature_version': '7cfde77960e3cf10327e9cb97f311418b101fc5ee2c146922a997306e318edaf',
  })
# ---
# name: test_feature_spec_version_with_column_selection_and_rename
  '7697ff31dac963c6b0772603f29285956e457a4a7cef5c15423d2fe5e74df43d'
# ---
# name: test_feature_spec_version_with_multiple_complex_deps
  '69121db4951443b14ecd14cdc2a3057ab05c79006c9474ddd75f6991e1f811a6'
# ---
